--- a/.env
+++ b/.env
@@ -32,8 +32,8 @@
 
 database.default.hostname = localhost
 database.default.database = email
-database.default.username = myadmin
-database.default.password = Enfin@123
+database.default.username = phpmyadminuser
+database.default.password = StrongPassword123
 # database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 # database.default.port = 3306
@@ -82,3 +82,10 @@ RABBITMQ_QUEUE_NAME = email_queue
 
 
 app.timezone = Asia/Kolkata
+
+
+SMTP_HOST=smtp.paymenthooks.com
+SMTP_PORT=587
+SMTP_USER=noreply@paymenthooks.com
+SMTP_PASS=He114402bHy08ce09a
+SMTP_FROM_NAME="EventHooks | Reliable Message Broker"
