--- a/.env
+++ b/.env
@@ -84,8 +84,8 @@ RABBITMQ_QUEUE_NAME = email_queue
 app.timezone = Asia/Kolkata
 
 
-SMTP_HOST=smtp.paymenthooks.com
+SMTP_HOST=smtp.demo.com
 SMTP_PORT=587
-SMTP_USER=noreply@paymenthooks.com
-SMTP_PASS=He114402bHy08ce09a
-SMTP_FROM_NAME="EventHooks | Reliable Message Broker"
+SMTP_USER=noreply@demo.com
+SMTP_PASS=dsfgsdfgsfdg
+SMTP_FROM_NAME="Demo | Reliable Message Broker"
