--- a/.env
+++ b/.env
@@ -32,8 +32,8 @@
 
 database.default.hostname = localhost
 database.default.database = email
-database.default.username = myadmin
-database.default.password = Enfin@123
+database.default.username = phpmyadminuser
+database.default.password = StrongPassword123
 # database.default.DBDriver = MySQLi
 # database.default.DBPrefix =
 # database.default.port = 3306
